--- a/style.css
+++ b/style.css
@@ -1,81 +1,135 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,500;0,600;0,700;1,400&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Playfair Display', serif;
-}
-body{
-    background: #bbc6fa;
-}
-.quotebox{
-    background: #fff;
-    width: 700px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    padding: 40px;
-    border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 10px 20px 0px rgba(0, 0, 0, 0.1);
-}
-.quotebox h2{
-    font-size: 32px;
-    margin-bottom: 40px;
-    position: relative;
-}
-.quotebox h2::after{
-    content: '';
-    width: 75px;
-    height: 3px;
-    border-radius: 3px;
-    background: rgb(23, 124, 229);
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.quotebox .blockquote{
-    font-size: 26px;
-    min-height: 110px;
-}
-.quotebox blockquote::before, .quotebox .blockquote::after{
-    content:  '"';
-}
-.quotebox span{
-    display: block;
-    margin-top: 10px;
-    float: right;
-    position: relative;
-}
-.quotebox span::before{
-    content: '';
-    width: 20px;
-    height: 2px;
-    background: rgb(23, 124, 229);
-    position: absolute;
-    top: 50%;
-    left: -30px;
-}
-.quotebox div{
-    width: 100%;
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
+/* Import Google Font - Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-.quotebox button{
-    background: rgb(23, 124, 229);
-    color: #fff;
-    border-radius: 25px;
-    border: 1px solid rgb(23,124,229);
-    width: 150px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 5px;
-    cursor: pointer;
 
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #5372F0;
+}
+
+.wrapper {
+  width: 605px;
+  background: #fff;
+  border-radius: 15px;
+  padding: 30px 30px 25px;
+  box-shadow: 0 12px 35px rgba(0, 0, 0, 0.1);
+}
+
+header,
+.content :where(i, p, span) {
+  color: #202842;
+}
+
+.wrapper header {
+  font-size: 35px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.wrapper .content {
+  margin: 35px 0;
+}
+
+.content .quote-area {
+  display: flex;
+  justify-content: center;
+}
+
+.quote-area i {
+  font-size: 15px;
+}
+
+.quote-area i:first-child {
+  margin: 3px 10px 0 0;
+}
+
+.quote-area i:last-child {
+  display: flex;
+  margin: 0 0 3px 10px;
+  align-items: flex-end;
+}
+
+.quote-area .quote {
+  font-size: 22px;
+  text-align: center;
+  word-break: break-all;
+}
+
+.content .author {
+  display: flex;
+  font-size: 18px;
+  margin-top: 20px;
+  font-style: italic;
+  justify-content: flex-end;
+}
+
+.author span:first-child {
+  margin: -7px 5px 0 0;
+  font-family: monospace;
+}
+
+.wrapper .buttons {
+  border-top: 1px solid #ccc;
+}
+
+.buttons .features {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.features ul {
+  display: flex;
+}
+
+.features ul li {
+  margin: 0 5px;
+  height: 47px;
+  width: 47px;
+  display: flex;
+  cursor: pointer;
+  color: #5372F0;
+  list-style: none;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid #5372F0;
+  transition: all 0.3s ease;
+}
+
+.features ul li:first-child {
+  margin-left: 0;
+}
+
+ul li:is(:hover, .active) {
+  color: #fff;
+  background: #5372F0;
+}
+
+
+
+.buttons button {
+  border: none;
+  color: #fff;
+  outline: none;
+  font-size: 16px;
+  cursor: pointer;
+  padding: 13px 22px;
+  border-radius: 30px;
+  background: #5372F0;
+}
+
+.buttons button.loading {
+  opacity: 0.7;
+  pointer-events: none;
 }
